--- a/date/2025-11/index.htm
+++ b/date/2025-11/index.htm
@@ -125,6 +125,90 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-10">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-11-10-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/92fffd0fe05881a022ba878442f3015e.webp" alt="11月10日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-11-10-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">11月10日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、加拿大、韩国、美国、欧洲、日本、新加坡等地区,最高速度可达18.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-09">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-11-9-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/83fc4ed0956827536cee5316dc8ae409.webp" alt="11月9日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-11-9-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">11月9日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、香港、欧洲、美国、日本、韩国、加拿大等地区,最高速度可达18.5 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-08">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-11-8-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/7b3a608463b7f9e8c651a30f75e14e8f.webp" alt="11月8日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-11-8-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">11月8日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、欧洲、美国、加拿大、日本、香港、新加坡等地区,最高速度可达21.1 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-07">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-11-7-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/fbe402bdb74e22057f867e36ba8365f5.webp" alt="11月7日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-11-7-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">11月7日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、日本、新加坡、欧洲、美国、加拿大、韩国等地区,最高速度可达22.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-06">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-11-6-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/fbe402bdb74e22057f867e36ba8365f5.webp" alt="11月6日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-11-6-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">11月6日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、新加坡、韩国、日本、美国、欧洲、香港等地区,最高速度可达19.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-05">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-11-5-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/46ee05e4d0152128fb5783fd0b1ffa7d.webp" alt="11月5日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-11-5-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">11月5日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、香港、韩国、加拿大、美国、日本、新加坡等地区,最高速度可达22.9 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-11-04">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-11-4-free-node-subscribe-links.htm" class="xcblog-blog-url">
@@ -191,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-11-4-free-node-subscribe-links.htm" title="11月4日→19M/S|2025年最新免费节点Sockscap64订阅链接地址">11月4日→19M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-31-node-share.htm" title="10月31日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址">10月31日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-12-free-high-speed-nodes.htm" title="10月12日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">10月12日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-9-node-share-links.htm" title="10月9日→18M/S|2025年最新免费节点Sockscap64订阅链接地址">10月9日→18M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-5-free-node-subscribe-links.htm" title="11月5日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址">11月5日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-18-free-node-subscribe.htm" title="10月18日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址">10月18日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-19-node-share-links.htm" title="10月19日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">10月19日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-17-free-high-speed-nodes.htm" title="10月17日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">10月17日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-10-node-share-links.htm" title="11月10日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">11月10日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-4-node-share.htm" title="10月4日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址">10月4日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-21-free-subscribe-node.htm" title="10月21日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址">10月21日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-15-node-share-links.htm" title="10月15日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址">10月15日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-2-free-node-subscribe.htm" title="11月2日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址">11月2日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-8-node-share.htm" title="10月8日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址">10月8日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-3-node-share-links.htm" title="10月3日→20.4M/S|2025年最新免费节点Sockscap64订阅链接地址">10月3日→20.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-25-free-subscribe-node.htm" title="10月25日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">10月25日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-5-free-node-subscribe-links.htm" title="10月5日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">10月5日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-1-free-node-subscribe.htm" title="11月1日→18.4M/S|2025年最新免费节点Sockscap64订阅链接地址">11月1日→18.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-20-node-share.htm" title="10月20日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址">10月20日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -212,7 +296,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">4</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">10</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
